# analisador-lexico

./: pyproject.toml
trabalho_analisador_lexico/: ConvertNFA.py  LexicalAnalyzer.py  NFAtoDFA.py  TokenGenerator.py
